Localization for Brazilian Portuguese completed.
Localization for Brazilian Portuguese completed.

--- a/src/main/resources/assets/magicmirror/lang/pt_br.json
+++ b/src/main/resources/assets/magicmirror/lang/pt_br.json
@@ -34,5 +34,5 @@
   "subtitle.magicmirror.teleport": "Teleporte",
   "subtitle.magicmirror.mirror_discharge": "Descarga de Espelho",
 
-  "itemGroup.magic_mirrors": "Espelhos Mágicos"
+  "itemGroup.magic_mirrors": "Magic Mirrors (Espelhos Mágicos)"
 }
