--- a/src/main/resources/assets/magicmirror/lang/en_us.json
+++ b/src/main/resources/assets/magicmirror/lang/en_us.json
@@ -19,7 +19,7 @@
   "item.magicmirror.dimensional_mirror_end": "Reflective Dragonstone",
 
   "item.magicmirror.dimension_crystal": "Dimension Crystal",
-  "item.magicmirror.mirror_frame": "Mirror frame",
+  "item.magicmirror.mirror_frame": "Mirror Frame",
   "item.magicmirror.enchanted_mirror": "Enchanted Mirror",
   "item.magicmirror.broken_mirror": "Broken Mirror",
   "item.magicmirror.broken_mirror_dimensional": "Broken Dimensional Mirror",
