--- a/src/main/resources/assets/magicmirror/lang/pt_br.json
+++ b/src/main/resources/assets/magicmirror/lang/pt_br.json
@@ -23,6 +23,7 @@
   "item.magicmirror.enchanted_mirror": "Espelho Encantado",
   "item.magicmirror.broken_mirror": "Espelho Quebrado",
   "item.magicmirror.broken_mirror_dimensional": "Espelho Dimensional Quebrado",
+  "chat.magicmirror.isriding": "Você tem que desmontar antes de se teletransportar!",
 
 
   "chat.magicmirror.bednotfound": "Cama não encontrada! Durma antes de poder usar o espelho!",
